--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --header-color: white;
+  --ip-information-text-color: black;
+  --ip-information-text-information-color: hsl(0, 0%, 59%);
+  color: var(--header-color);
 }
 
 body,
@@ -19,9 +19,4 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
-}
-
-body {
-  display: grid;
-  grid-template-rows: 300px 1fr;
 }
