--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,21 @@
   margin: 0 auto;
   text-align: center;
 }
-.all-content-container {
-  display: grid;
-  grid-template-rows: 400px 1fr;
-}
+
 .ip-address-container {
   background-image: url("images/pattern-bg-mobile.png");
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  height: 100%;
+  height: 40vh;
   display: flex;
   align-content: center;
   justify-content: center;
 }
 
 .ip-maps-main-container {
-  height: 100%;
+  position: relative;
+  height: 60vh;
 }
 #map {
 }
