--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,9 @@
   position: relative;
   height: 60vh;
 }
-#map {
+
+@media only screen and (min-width: 992px) {
+  .ip-address-container {
+    background-image: url("images/pattern-bg-desktop.png");
+  }
 }
