added service to query for ip address, displays values.

--- a/src/SearchIpOrDomain/SearchIpOrDomain.css
+++ b/src/SearchIpOrDomain/SearchIpOrDomain.css
@@ -17,6 +17,9 @@
   padding-left: 20px;
 }
 
+.not-allowed {
+  cursor: not-allowed !important;
+}
 .search-button {
   border: none;
   width: 20%;
