color of button on hover changed to very dark grey.

--- a/src/SearchIpOrDomain/SearchIpOrDomain.css
+++ b/src/SearchIpOrDomain/SearchIpOrDomain.css
@@ -31,7 +31,7 @@
 }
 
 .search-button:hover {
-  border: 1px solid white;
+  background-color: var(--very-dark-grey);
 }
 
 @media only screen and (min-width: 992px) {
