--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --header-color: white;
   --ip-information-text-color: black;
   --ip-information-text-information-color: hsl(0, 0%, 59%);
+  --very-dark-grey: hsl(0, 0%, 17%);
   color: var(--header-color);
 }
 
